# conversation_bot

./: README.md  main.py  pyproject.toml
python/: main.py  requirements.txt
sketch/: sketch.ino
