[project]
name = "conversation-bot"
version = "0.1.0"
description = "Commbox Conversation Bot Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.62.0",
    "gpiozero>=2.0.1",
    "numpy>=2.4.2",
    "pyaudio>=0.2.14",
    "pyserial>=3.5",
    "python-dotenv>=1.2.1",
    "sounddevice>=0.5.5",
]
